--- a/css/styles.css
+++ b/css/styles.css
@@ -626,7 +626,7 @@ img {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--background-color);
 }
 .footer .container {
   display: flex;
@@ -655,7 +655,7 @@ img {
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
-  fill: #ffffff;
+  fill: var(--background-c);
   transition: background-color var(--hover-duration) var(--hover-time-function);
 }
 .acept-link:hover,
@@ -677,6 +677,7 @@ img {
   position: absolute;
   min-height: 581px;
   width: 528px;
+  padding: 40px;
   background-color: var(--background-color);
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -699,6 +700,14 @@ img {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  cursor: pointer;
+  transition-property: fill;
+  transition-duration: var(--hover-duration);
+  transition-timing-function: var(--hover-time-function);
+}
+.modal-close:hover,
+.modal-close:focus {
+  fill: var(--accent-color);
 }
 
 .is-hidden {
@@ -707,5 +716,172 @@ img {
   visibility: hidden;
 }
 .backdrop.is-hidden {
-  transform: scale(1) rotate(-360deg);
+  transform: scale(1) rotate(-260deg);
+}
+
+.modal-form {
+  margin-top: 12px;
+}
+.modal-field {
+  margin-bottom: 10px;
+}
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  margin-bottom: 12px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 30px;
+  color: var(--second-text-color);
+  font-weight: 400;
+  font-size: 14px;
+  outline: transparent;
+  transition: border-color var(--hover-duration) var(--hover-time-function);
+}
+
+.modal-input:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-text:focus {
+  border-color: var(--accent-color);
+}
+.modal-input:focus + .input-icon {
+  fill: var(--accent-color);
+}
+
+.input-wrap {
+  position: relative;
+}
+
+.input-icon {
+  position: absolute;
+  left: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill var(--hover-duration) var(--hover-time-function);
+}
+
+.modal-label {
+  position: relative;
+  margin-bottom: 4px;
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--second-text-color);
+}
+.modal-link {
+  color: var(--accent-color);
+}
+
+.modal-input:not(:focus):not(:placeholder-shown):valid {
+  background-color: rgba(72, 146, 67, 0.361);
+}
+.modal-input:not(:focus):not(:placeholder-shown):invalid {
+  background-color: rgba(202, 87, 106, 0.361);
+}
+
+.modal-field div:last-child {
+  margin-bottom: 10px;
+}
+.modal-field-check {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.modal-input::placeholder,
+.modal-text::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-text {
+  display: block;
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  padding: 12px;
+  outline: transparent;
+  transition: border-color var(--hover-duration) var(--hover-time-function);
+}
+
+.check-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
+}
+
+.check-text span {
+  width: 16px;
+  height: 15px;
+  border: 2px solid #303030;
+  border-radius: 2px;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.check-icon {
+  fill: transparent;
+}
+
+.modal-check:checked + .check-text span {
+  background-color: var(--accent-color);
+  border: none;
+}
+
+.modal-check:focus + .check-text span {
+  border-color: var(--accent-color);
+}
+
+.modal-check:checked + .check-text .check-icon {
+  fill: var(--background-color);
+}
+.modal-send {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
+  min-width: 200px;
+  height: 50px;
+  padding: 10px 55px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--background-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  transition: background-color var(--hoover-duration) var(--hover-time-function);
+}
+.modal-send:hover,
+.modal-send:focus {
+  background-color: var(--second-accent-color);
 }
