--- a/css/styles.css
+++ b/css/styles.css
@@ -633,6 +633,7 @@ img {
 }
 .footer-flex {
   margin-right: 70px;
+  flex-grow: 1;
 }
 .acept {
   display: block;
@@ -697,7 +698,6 @@ img {
 .footer-input:focus {
   border: 1px solid rgba(255, 255, 255, 0.6);
 }
-
 .footer-button-submit {
   border: none;
 }
@@ -741,7 +741,6 @@ img {
 .footer-button-submit:focus {
   background-color: var(--second-accent-color);
 }
-
 /*--------------modal window------------*/
 .backdrop {
   position: absolute;
@@ -798,9 +797,6 @@ img {
   transform: scale(1) rotate(-260deg);
 }
 
-.modal-form {
-  margin-top: 12px;
-}
 .modal-field {
   margin-bottom: 10px;
 }
@@ -871,9 +867,9 @@ img {
   background-color: rgba(202, 87, 106, 0.361);
 }
 
-.modal-field div:last-child {
+/*.modal-field div:last-child {
   margin-bottom: 10px;
-}
+}*/
 .modal-field-check {
   margin-top: 20px;
   margin-bottom: 30px;
